--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Sneha14-sc.github.io/Project2",
+  "homepage": "https://Sneha14-sc.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
